[tool.poetry]
name = "2일차 과제"
version = "0.1.0"
description = ""
authors = ["choiguen <daindj0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.9"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.2"
mypy = "^1.18.2"
pytest = "8.3.4"
coverage = "7.6.9"
pytest-asyncio = "0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"